# amazon-market-monitor

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .coverage  Dockerfile  main.py  requirements.txt
backend/scripts/: run_dev_server.py  run_scrape_job.py  run_server.py
backend/src/: __init__.py  automation.py  db.py  llm.py  models.py  scraper_client.py  services.py
backend/tests/: test_api.py  test_db.py  test_scraper_client.py  test_services.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: AppHeader.vue  AutomationPanel.vue  CompetitorPanel.vue  PriceHistoryChart.vue  ProductCard.vue  ProductForm.vue  ProductList.vue
frontend/src/services/: api.js
