[project]
name = "amazonpricecompetitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "fastapi>=0.115.0",
    "openai>=1.107.2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.0",
    "tinydb>=4.8.2",
    "uvicorn[standard]>=0.34.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
